--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body, html {
+body,html {
     height: 100%;
+    width:100%;
   }
   
   .bg {
@@ -17,6 +18,7 @@ body, html {
     background-size: cover;
   }
   .bghalf {
+    display: flex;
     background-image: url("img2.jpg");
     float:left;
     width: 60%;
@@ -39,7 +41,7 @@ body, html {
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%) }
+    transform: translate(-50%, -50%); }
 
     .btn
     {
@@ -47,10 +49,9 @@ body, html {
         color: white;
         border-radius: 1em;
         padding: 1em;
+        padding-left: 2rem;
         float:right;
-        position: absolute;
-        top:65%;
-        left:77%;
+        position: relative;
         font-size: larger;
     
     }
@@ -65,7 +66,9 @@ body, html {
         top: 50%;
         left: 30%;
         margin-right: -50%;
-        transform: translate(-50%, -50%) }
+        transform: translate(-50%, -50%);
+        
+       }
 
     .sectionright
     {
@@ -73,11 +76,13 @@ body, html {
         color: white;
         border-radius: 1em;
         padding: 1em;
-        position: absolute;
-        top: 11%;
+        position: relative;
+        top: 1%;
         left: 80%;
         margin-right: -50%;
-        transform: translate(-50%, -50%)
+        transform: translate(-50%, -50%);
+        
+
     }
 
     .sectiontop
@@ -94,7 +99,8 @@ body, html {
     }
     .topnav {
         overflow: hidden;
-        background-color: rgb(0, 0, 0);
+       background-color: rgb(0, 0, 0);
+        backdrop-filter: blur(4px);
       }
       
       .topnav a {
@@ -125,15 +131,7 @@ body, html {
         margin: 20px;
       }
 
-      .contact
-      {
-        color: rgb(0, 0, 0);
-        position: absolute;
-        top: 50%;
-        left: 30%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%) 
-      }
+      
       .column {
         float: right;
         width: 35%;
@@ -169,6 +167,14 @@ body, html {
           border:3px solid black;
       }
 
+
+      *,
+      *::after,
+      *::before {
+        margin: 0;
+        padding: 0;
+        box-sizing: inherit; 
+      }
 
      
       
@@ -221,5 +227,11 @@ body, html {
      
       }
 
+
+     img {
+  max-width: 100%;
+  height: auto;
+}
+     
 
       
