--- a/style.css
+++ b/style.css
@@ -176,62 +176,40 @@ body,html {
         box-sizing: inherit; 
       }
 
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+           
+
      
-      
-      .container {
-        width: 60%;
-        margin: 2rem auto; 
-      }
-      
-      .gallery {
-        display: grid;
-        grid-template-columns: repeat(9, 1fr);
-        grid-template-rows: repeat(9, 5vw);
-        grid-gap: 1.5rem; 
-      }
-
+.title_header{
     
-      .gallery__img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block; 
-      }
-      
-      .gallery__item--1 {
-        grid-column-start: 1;
-        grid-column-end: 4;
-        grid-row-start: 1;
-        grid-row-end: 9;
-      }
-      
-      .gallery__item--2 {
-        grid-column-start: 3;
-        grid-column-end: 7;
-        grid-row-start: 1;
-        grid-row-end: 5;
-      }
-      
-      .gallery__item--3 {
-        grid-column-start: 3;
-        grid-column-end: 7;
-        grid-row-start: 5;
-        grid-row-end: 9;
-      }
-    
-      .gallery__item--4 {
-        grid-column-start: 6;
-        grid-column-end: 9;
-        grid-row-start: 1;
-        grid-row-end: 9;
-     
-      }
-
-
-     img {
-  max-width: 100%;
-  height: auto;
+  padding: .5em;
+  color:#2aa59f;
+  font-size: 5em;
+  
+  text-align: center;
 }
-     
+
+
+.gallery{
+  max-width: 25em;
+  min-height: 25em;
+  border: 1px hidden;
+  border-radius: 5%;
+  opacity: 0.75;
+  padding: 1em;
+  image-orientation:auto;
+}
+
+.gallery:hover{
+  opacity: 1;
+}
+
+.gallery>img
+{
+  float:left;
+}
 
       
