--- a/style2.css
+++ b/style2.css
@@ -65,11 +65,17 @@ html {
     .column2 {
       width:100%;
       height: 50vh;
+
+    }
+    .column2>img
+    {
+        padding-left:5px;
     }
     .column1
     {
       width:100%;
       height: 50vh;
+      margin-right: 0rem;
     }
     .row{
       flex-wrap: wrap;
